force-app/main/default/objects/Complimentary_Upgrade__c/Complimentary_Upgrade__c.object-meta.xml
<CustomObject>
    <label>Complimentary Upgrade</label>
    <nameField>
        <displayFormat>COMP-{0000}</displayFormat>
        <label>Complimentary Upgrade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complimentary Upgrades</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>