force-app/main/default/objects/Complimentary_Upgrade__c/fields/QCC_Comp_Upgrade_Contact__c.field-meta.xml
<CustomField>
    <fullName>QCC_Comp_Upgrade_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Value comes from Pre-Departure platform event. This is used as a reference for the agent when they are working on a &quot;Review Complimentary Upgrade&quot; case.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Complimentary Upgrades</relationshipLabel>
    <relationshipName>Complimentary_Upgrades</relationshipName>
    <type>Lookup</type>
</CustomField>