force-app/main/default/objects/Complimentary_Upgrade__c/fields/QCC_Departure_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>QCC_Departure_Airport_Code__c</fullName>
    <description>Value comes from Pre-Departure platform event. This is used as a reference for the agent when they are working on a &quot;Review Complimentary Upgrade&quot; case.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Airport Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>