force-app/main/default/objects/Complimentary_Upgrade__c/fields/QCC_Departure_Local_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_Departure_Local_Date__c</fullName>
    <description>Value comes from Pre-Departure platform event. This is referenced by the Email Alert for first host is sent.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Local Date</label>
    <type>Date</type>
</CustomField>