force-app/main/default/objects/Complimentary_Upgrade__c/fields/QCC_Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>QCC_Exception_Reason__c</fullName>
    <description>Value comes from Pre-Departure platform event. This is used as a reference for the agent when they are working on a &quot;Review Complimentary Upgrade&quot; case.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Reason</label>
    <length>30</length>
    <type>Text</type>
</CustomField>